fixed number input

--- a/Login.html
+++ b/Login.html
@@ -46,31 +46,39 @@
               <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
             </div>
             <div class="account-no field full" style="margin-top: 40px;">
-              <input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
-                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
+              <input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text"
+                yt-type="whole" class="digit form-control" yt-max-length="1"><input
+                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
                 class="digit form-control" yt-max-length="1">
-              <input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
-                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
-                class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text"
-                yt-type="whole" class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
+              <input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text"
+                yt-type="whole" class="digit form-control" yt-max-length="1"><input
+                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
+                class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();"
+                onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
+                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
                 type="text" yt-type="whole" class="digit form-control" yt-max-length="1"><input
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
-                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
-                class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text"
-                yt-type="whole" class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
+                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
+                class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();"
+                onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
+                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
                 type="text" yt-type="whole" class="digit form-control" yt-max-length="1"><input
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
-                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
-                class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text"
-                yt-type="whole" class="digit form-control" yt-max-length="1">
+                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
+                class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();"
+                onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
+                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
+                type="text" yt-type="whole" class="digit form-control" yt-max-length="1"><input
+                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
+                class="digit form-control" yt-max-length="1">
             </div>
             <div class="account-no-small field full" style="margin-top: 40px;">
-              <input type="text" yt-type="whole" class="no-segment  form-control" onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
-                id="first-four" yt-next-focus="#second-four" yt-max-length="4"><i>-</i><input type="text" yt-type="whole"
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" class="no-segment  form-control" id="second-four"
-                yt-next-focus="#last-five" yt-max-length="4"><i>-</i><input style="width:100px !important" type="text"
-                yt-type="whole" class="no-segment  form-control" onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" yt-max-length="5"
-                id="last-five">
+              <input type="text" yt-type="whole" class="no-segment  form-control"
+                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" id="first-four"
+                yt-next-focus="#second-four" yt-max-length="4"><i>-</i><input type="text" yt-type="whole"
+                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
+                class="no-segment  form-control" id="second-four" yt-next-focus="#last-five"
+                yt-max-length="4"><i>-</i><input style="width:100px !important" type="text" yt-type="whole"
+                class="no-segment  form-control" onkeydown="return window.validateInput();"
+                onkeyup="window.changeFocus()" yt-max-length="5" id="last-five">
             </div>
             <div class="form-group" style="
     display: flex;
@@ -126,20 +134,20 @@
         }
         for (let ind = 0; ind < inputs.length; ind++) {
           const input = inputs[ind];
-          accountStr+=input.value
+          accountStr += input.value
         }
         let accountNo = parseInt(accountStr)
         if (isNaN(accountNo)) {
-          notify("Invalid credits","Please, check your input.","Now","fa-lock")
-        } else if (signIn(accountNo, getField(data,"password"))) {
+          notify("Invalid credits", "Please, check your input.", "Now", "fa-lock")
+        } else if (signIn(accountNo, getField(data, "password"))) {
           history.replaceState(null, null, "./index.html");
           history.go();
         } else {
-        notify("Invalid credits", "Please, check your input.", "Now", "fa-lock")
+          notify("Invalid credits", "Please, check your input.", "Now", "fa-lock")
         }
       } catch (err) {
         console.log(err)
-           notify("Invalid credits", "Please, check your input.", "Now", "fa-lock")
+        notify("Invalid credits", "Please, check your input.", "Now", "fa-lock")
       }
       return false;
     }
