Almost done with split number input

--- a/Login.html
+++ b/Login.html
@@ -46,38 +46,38 @@
               <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
             </div>
             <div class="account-no field full" style="margin-top: 40px;">
-              <input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text"
+              <input onkeydown="{window.validateInput();window.changeFocus();return false}"  type="text"
                 yt-type="whole" class="digit form-control" yt-max-length="1"><input
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
+                onkeydown="{window.validateInput();window.changeFocus();return false}"  type="text" yt-type="whole"
                 class="digit form-control" yt-max-length="1">
-              <input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text"
+              <input onkeydown="{window.validateInput();window.changeFocus();return false}"  type="text"
                 yt-type="whole" class="digit form-control" yt-max-length="1"><input
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
-                class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();"
-                onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
-                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
+                onkeydown="{window.validateInput();window.changeFocus();return false}"  type="text" yt-type="whole"
+                class="digit form-control" yt-max-length="1"><input onkeydown="{window.validateInput();window.changeFocus();return false}"
+                 type="text" yt-type="whole" class="digit form-control"
+                yt-max-length="1"><input onkeydown="{window.validateInput();window.changeFocus();return false}" 
                 type="text" yt-type="whole" class="digit form-control" yt-max-length="1"><input
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
-                class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();"
-                onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
-                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
+                onkeydown="{window.validateInput();window.changeFocus();return false}"  type="text" yt-type="whole"
+                class="digit form-control" yt-max-length="1"><input onkeydown="{window.validateInput();window.changeFocus();return false}"
+                 type="text" yt-type="whole" class="digit form-control"
+                yt-max-length="1"><input onkeydown="{window.validateInput();window.changeFocus();return false}" 
                 type="text" yt-type="whole" class="digit form-control" yt-max-length="1"><input
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
-                class="digit form-control" yt-max-length="1"><input onkeydown="return window.validateInput();"
-                onkeyup="window.changeFocus()" type="text" yt-type="whole" class="digit form-control"
-                yt-max-length="1"><input onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
+                onkeydown="{window.validateInput();window.changeFocus();return false}"  type="text" yt-type="whole"
+                class="digit form-control" yt-max-length="1"><input onkeydown="{window.validateInput();window.changeFocus();return false}"
+                 type="text" yt-type="whole" class="digit form-control"
+                yt-max-length="1"><input onkeydown="{window.validateInput();window.changeFocus();return false}" 
                 type="text" yt-type="whole" class="digit form-control" yt-max-length="1"><input
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" type="text" yt-type="whole"
+                onkeydown="{window.validateInput();window.changeFocus();return false}"  type="text" yt-type="whole"
                 class="digit form-control" yt-max-length="1">
             </div>
             <div class="account-no-small field full" style="margin-top: 40px;">
               <input type="text" yt-type="whole" class="no-segment  form-control"
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()" id="first-four"
+                onkeydown="{window.validateInput();window.changeFocus();return false}" onkeyup="window.changeFocus()" id="first-four"
                 yt-next-focus="#second-four" yt-max-length="4"><i>-</i><input type="text" yt-type="whole"
-                onkeydown="return window.validateInput();" onkeyup="window.changeFocus()"
+                onkeydown="{window.validateInput();window.changeFocus();return false}" onkeyup="window.changeFocus()"
                 class="no-segment  form-control" id="second-four" yt-next-focus="#last-five"
                 yt-max-length="4"><i>-</i><input style="width:100px !important" type="text" yt-type="whole"
-                class="no-segment  form-control" onkeydown="return window.validateInput();"
+                class="no-segment  form-control" onkeydown="{window.validateInput();window.changeFocus();return false}"
                 onkeyup="window.changeFocus()" yt-max-length="5" id="last-five">
             </div>
             <div class="form-group" style="
