removed home tab

--- a/index.html
+++ b/index.html
@@ -72,13 +72,6 @@ transform: none;
         </div>
         <div class="u-custom-menu u-nav-container" id="nav">
           <ul class="u-custom-font u-font-oswald u-nav u-spacing-30 u-unstyled u-nav-1">
-            <li yt-href="Home.html" class="u-nav-item yt-hover-scale-up" id="home-tab"
-              yt-calls="navigate(click) selectTab(mouseenter)"><a
-                class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-bottom u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
-                style="padding: 10px 0px;"><span lang="en-us">Home</span>
-                <span lang="amh">መግቢያ</span>
-              </a>
-            </li>
 
             <li class="u-nav-item yt-hover-scale-up" id="about-tab"
               yt-calls="selectTab(hover) showDrop(mouseenter) hideDrop(mouseleave)" yt-target="#about-sub">
@@ -239,10 +232,6 @@ transform: none;
     flex-flow: column;
     align-items: center;
     justify-content: center;" class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                <li id="home-2-tab" class="u-nav-item"><a class="u-button-style u-nav-link" yt-calls="navigate(click)"
-                    yt-href="Home.html" style="padding: 10px 0px;"><span lang="en-us">Home</span>
-                    <span lang="amh">መግቢያ</span></a>
-                </li>
                 <li class="u-nav-item" id="about-2-tab"><a class="u-button-style u-nav-link" yt-calls="navigate(click)"
                     yt-href="Aboutus.html" style="padding: 10px 0px;"><span lang="en-us">About Us</span>
                     <span lang="amh">ስለኛ</span></a>
@@ -332,7 +321,7 @@ transform: none;
         </p>
       </div>
       <button class="u-dialog-close-button u-icon u-text-grey-50 u-icon-2"><svg class="u-svg-link"
-          preserveAspectRatio="xMidYMin slice" viewBox="0 0 413.348 413.348" style="">
+          preserveAspectRatio="xMidYMin slice" viewBox="0 0 413.348 413.348">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-5801"></use>
         </svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
           xml:space="preserve" class="u-svg-content" viewBox="0 0 413.348 413.348" id="svg-5801">
